<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/loginLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/welcomeScreen"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toTopOf="@id/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible">

        <TextView
            android:id="@+id/welcomeText"
            style="@style/TextViewStyle.Header"
            android:layout_marginTop="50dp"
            android:text="@string/welcome"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="0dp"
            android:layout_height="280dp"
            android:contentDescription="@string/company_logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/welcomeText"
            app:srcCompat="@drawable/white_logo" />

        <TextView
            android:id="@+id/AppName"
            style="@style/TextViewStyle.Header"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo" />

        <TextView
            android:id="@+id/legalInfo"
            style="@style/TextViewStyle.Body"
            android:background="@color/colorPrimaryDark"
            android:paddingLeft="40dp"
            android:paddingTop="5dp"
            android:paddingRight="40dp"
            android:paddingBottom="5dp"
            android:text="@string/legal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/AppName" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="gone">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="0dp"
            android:layout_height="280dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/white_logo" />

        <EditText
            android:id="@+id/getLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView" />

        <EditText
            android:id="@+id/getPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/getLastName" />

        <Button
            android:id="@+id/goLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-light"
            android:text="@string/login"
            app:layout_constraintEnd_toEndOf="@+id/getPassword"
            app:layout_constraintTop_toBottomOf="@+id/getPassword" />

        <TextView
            android:id="@+id/noAccount"
            style="@style/TextViewStyle.Body"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="20dp"
            android:text="Don't have an account?"
            android:textAllCaps="false"
            app:layout_constraintBottom_toTopOf="@+id/signUp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goLogin" />

        <Button
            android:id="@+id/signUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/colorPrimaryDark"
            android:fontFamily="sans-serif-light"
            android:text="sign up"
            app:layout_constraintEnd_toEndOf="@+id/noAccount"
            app:layout_constraintStart_toStartOf="@+id/noAccount"
            app:layout_constraintTop_toBottomOf="@+id/noAccount" />

        <ImageButton
            android:id="@+id/showPassword"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:background="@android:color/transparent"
            app:layout_constraintBottom_toBottomOf="@+id/getPassword"
            app:layout_constraintEnd_toEndOf="@+id/getPassword"
            app:layout_constraintTop_toTopOf="@+id/getPassword"
            app:srcCompat="@drawable/show_password_icon" />

    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>